Correções na Home

--- a/css/home.css
+++ b/css/home.css
@@ -23,7 +23,7 @@
 
 .welcome-text a.botao-verde {
     font-size: 32px;
-    margin: 10px 0 10px 300px;
+    margin: 10px 0 10px 25vw;
 }
 
 .welcome-text p {
